cleaned kelp data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-data/Bottom_temp_all_years_20190806.csv
-data/mohawk_moored_pH_mko_20171219.csv
-data/Annual_Quad*.csv
+data/raw/Bottom_temp_all_years_20190806.csv
+data/raw/mohawk_moored_pH_mko_20171219.csv
+data/raw/Annual_Quad*.csv
