--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ data/raw/Bottom_temp_all_years_20190806.csv
 data/raw/mohawk_moored_pH_mko_20171219.csv
 data/raw/Annual_Quad*.csv
 data/raw/LTER_monthly*.txt
+data/raw/Annual_All_Species*.csv
